fix scrollbar and links

--- a/src/assets/styles/common.styl
+++ b/src/assets/styles/common.styl
@@ -11,6 +11,19 @@ body
   &.lock
     overflow hidden
 
+html, body
+  ::-webkit-scrollbar
+    width 10rem
+    height 8rem
+
+  ::-webkit-scrollbar-thumb
+    background-color $primary
+    border-radius 20em
+    box-shadow inset 1rem 1rem 10rem $second
+
+  scrollbar-color $primary
+  scrollbar-width thin
+
 .main
   display flex
   flex-direction column
