--- a/src/assets/styles/layout/header.styl
+++ b/src/assets/styles/layout/header.styl
@@ -60,7 +60,7 @@
       justify-content center
 
       &.mobile .header__nav-item > a
-          color $gray
+        color $gray
 
       @media $mobile
         padding 200rem 0
@@ -94,10 +94,15 @@
 
       & > a
         padding-bottom 2rem
+        @media $mobile
+          padding-bottom 0
+
         &:hover
           color $primary
+
         &.router-link-exact-active.active
           border-bottom 1px solid
+
 .burger__btn
   height 21rem
   width 30rem
@@ -105,8 +110,10 @@
   z-index 10
   @media $desktop
     display none
+
   &.dark > span
     background-color $second
+
   & > span
     height 2rem
     width 100%
