--- a/src/assets/styles/pages/exhibitions.styl
+++ b/src/assets/styles/pages/exhibitions.styl
@@ -33,6 +33,13 @@
       &:first-child
         margin-right 20rem
 
+  &__list
+    overflow auto
+    height 600rem
+    @media $mobile
+      height auto
+
+
   &__item
     display flex
     align-items center
